--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "express": "^4.16.3",
     "path": "^0.12.7",
     "react": "^16.4.1",
+    "react-digraph": "^4.0.3",
     "react-dom": "^16.4.1",
     "react-graph-vis": "^1.0.2",
+    "react-vis": "^1.10.1",
+    "react-vis-force": "^0.3.1",
     "styled-components": "^3.3.3"
   }
 }
