--- a/package.json
+++ b/package.json
@@ -30,16 +30,13 @@
     "axios": "^0.18.0",
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "mongodb": "^3.1.1",
+    "mongoose": "^5.2.2",
     "path": "^0.12.7",
     "react": "^16.4.1",
-    "react-digraph": "^4.0.3",
     "react-dom": "^16.4.1",
-    "react-graph-vis": "^1.0.2",
-    "react-vis": "^1.10.1",
-    "react-vis-force": "^0.3.1",
     "styled-components": "^3.3.3"
   }
 }
